<resources>
    <string name="app_name">Brothers</string>
    <string name="desc">logo background</string>
    <string name="user_name">USER NAME</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="password">********</string>
    <string name="new_email">Enter Your Email</string>
    <string name="already_registered"><u>Already Registered? Sign In</u></string>
    <string name="welcome"><b>Welcome! </b>You are at the HomeScreen</string>
    <string name="registered_email">Registered Email</string>
    <string name="create_account"><u>Not Registered? Register Here</u></string>
    <string name="todo">TODO</string>
    <string name="profile_info">Your About Section.</string>
    <string name="your_name">Your Name</string>
    <string name="email">example@email.com</string>
    <string name="phone">9876543210</string>
    <string name="skills">Your Skills</string>
    <string name="edit_profile">Edit Profile Details</string>
    <string name="enter_name">enter your name</string>
    <string name="enter_phone">enter your mobile number</string>
    <string name="enter_bio">say something about yourself</string>
    <string name="name">Your Name</string>
    <string name="your_phone">Mobile Number</string>
    <string name="about">About</string>
    <string name="skillset">enter your skills</string>
    <string name="skill_header">Skills</string>
    <string name="member_name">Member Name</string>
    <string name="member_email">Member Email</string>
    <string name="logout">LogOut</string>
    <string name="title_activity_poll">PollActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="polls">POLLS</string>
    <string name="results">RESULTS</string>
    <string name="question">Question</string>
    <string name="button">BUTTON</string>
    <string name="example_question">Are women and girls safe in India?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="someone_pandey">Someone Pandey</string>
    <string name="yes">Yes</string>
    <string name="textview">TextView</string>
    <string name="payment_reminder">Payment Reminder</string>
    <string name="payment_reminder_text">Hi userName, please make the contribution for month/months.</string>
    <string name="ok">OK</string>
    <string name="title_activity_member_detail">MemberDetailActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_member_details">MemberDetailsActivity</string>
    <string name="payment_status">Payment Status:</string>
    <string name="contribution_details">Contribution Details</string>
    <string name="skill">Skills:</string>
    <string name="pending_or_paid">Pending or Paid</string>
    <string name="mobile">Mobile</string>
    <string name="months_pending">Months Pending:</string>
    <string name="emailHead">Email:</string>
    <string name="april_and_may_2018">April and May 2018</string>
    <string name="personal_details">Personal Details</string>
    <string name="amount_paid_current_month">Amount Paid: (Current Month)</string>
    <string name="_0">0</string>
    <string name="amount_paid_total">Amount Paid: (Total)</string>
    <string name="_1000">$1000</string>
</resources>
