<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prabhat.brothers.MemberDetailsActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/memberToolbar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/accentBlue"
        app:title="Member Details"
        app:titleTextColor="@color/white">

    </android.support.v7.widget.Toolbar>


    <ImageView
        android:id="@+id/logobg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/member_details_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memberToolbar"
        app:srcCompat="@drawable/logo_bg" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/memberDP"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:src="@drawable/profile_empty_image"
        app:layout_constraintBottom_toTopOf="@+id/member_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memberToolbar" />
    <TextView
        android:id="@+id/member_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/your_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/member_about"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/member_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/profile_info"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/logobg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <android.support.constraint.Guideline
        android:id="@+id/member_details_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/member_details_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:paddingBottom="36dp"
            android:weightSum="0">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_details"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:textAlignment="center"
                android:textSize="26sp"
                android:textStyle="bold"
                android:background="@color/accentBlue"
                android:textColor="@color/white"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:layout_marginBottom="16dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="0"
                android:gravity="center_horizontal"
                android:background="@drawable/bottom_stroke"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">
                <TextView
                    android:id="@+id/emailHead"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/emailHead"
                    android:layout_gravity="center_vertical"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_weight="4"/>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="6"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/email"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="0"
                android:gravity="center_horizontal"
                android:background="@drawable/bottom_stroke"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">
                <TextView
                    android:id="@+id/mobileHead"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile"
                    android:layout_gravity="center_vertical"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_weight="4"/>

                <TextView
                    android:id="@+id/memberMobile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="6"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/phone"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="0"
                android:gravity="center_horizontal"
                android:background="@drawable/bottom_stroke"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">
                <TextView
                    android:id="@+id/skillsetHead"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/skill"
                    android:layout_gravity="center_vertical"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_weight="4"/>

                <TextView
                    android:id="@+id/skillset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="6"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/skillset"
                    android:textSize="18sp" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contribution_details"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:textAlignment="center"
                android:textSize="26sp"
                android:textStyle="bold"
                android:background="@color/accentBlue"
                android:textColor="@color/white"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="0"
                android:gravity="center_horizontal"
                android:background="@drawable/bottom_stroke"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">
                <TextView
                    android:id="@+id/paymentStatusHead"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_status"
                    android:layout_gravity="center_vertical"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_weight="5"/>

                <TextView
                    android:id="@+id/paymentStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="5"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/pending_or_paid"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="0"
                android:gravity="center_horizontal"
                android:background="@drawable/bottom_stroke"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">
                <TextView
                    android:id="@+id/monthsPendingHead"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/months_pending"
                    android:layout_gravity="center_vertical"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_weight="5"/>

                <TextView
                    android:id="@+id/monthsPending"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="5"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/april_and_may_2018"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="0"
                android:gravity="center_horizontal"
                android:background="@drawable/bottom_stroke"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">
                <TextView
                    android:id="@+id/amountPaidCurrentHead"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_paid_current_month"
                    android:layout_gravity="center_vertical"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_weight="5"/>

                <TextView
                    android:id="@+id/amountPaidCurrent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="5"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/_0"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="0"
                android:gravity="center_horizontal"
                android:background="@drawable/bottom_stroke"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">
                <TextView
                    android:id="@+id/amountPaidTotalHead"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_paid_total"
                    android:layout_gravity="center_vertical"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_weight="5"/>

                <TextView
                    android:id="@+id/amountPaidTotal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="5"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/_1000"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        tools:layout_editor_absoluteX="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible"/>

</android.support.constraint.ConstraintLayout>
