<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prabhat.brothers.PaymentReminder">

    <TextView
        android:id="@+id/payment_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/accentBlue"
        android:padding="10dp"
        android:paddingEnd="48dp"
        android:paddingStart="48dp"
        android:text="@string/payment_reminder"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/payment_reminder_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/payment_reminder_text"
        android:textAlignment="center"
        android:textColor="@color/accentBlue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_reminder"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/accentBlue"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/payment_reminder_text"
        app:layout_constraintTop_toBottomOf="@+id/payment_reminder_text"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
